fix: Fixing merge